@@ -1,3 +1,8 @@
+2018-04-09  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* lib/mi-support.exp (mi_run_cmd_full): Fix regexp and add a
+	timeout.
+
 2018-02-02  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* gdb.base/examine-backward.exp: Be more forgiving of failures to
